[package]
name = "streamsmith"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
description = "Turn any video into a ready-to-serve HLS adaptive-bitrate stream — with a built-in preview player — in one command."
authors = ["Amahdip"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Amahdip/streamsmith"
homepage = "https://github.com/Amahdip/streamsmith"
readme = "README.md"
keywords = ["hls", "ffmpeg", "video", "streaming", "transcoding"]
categories = ["command-line-utilities", "multimedia::video"]
exclude = ["assets/*.gif", "/.github"]

[[bin]]
name = "streamsmith"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tiny_http = "0.12"   # tiny, sync, dependency-light preview server
open = "5"           # launch the default browser at the preview URL

# A single-binary CLI wants a small, fast-launching artifact. Optimize the
# release build for size and speed without hurting startup.
[profile.release]
opt-level = "z"      # optimize for size (the hot work is inside ffmpeg, not us)
lto = true
codegen-units = 1
strip = true
# Note: unwinding (not abort) so a panic in one encode worker doesn't SIGABRT
# the whole run — the scoped pool surfaces it instead.
